[gd_scene load_steps=4 format=2]

[ext_resource path="res://main/menu.gd" type="Script" id=1]
[ext_resource path="res://art/image.png" type="Texture" id=2]

[sub_resource type="Theme" id=1]

[node name="menu" type="Control"]
anchor_right = 0.529
anchor_bottom = 0.556
margin_right = 790.32
margin_bottom = 350.52
rect_scale = Vector2( 0.566878, 0.631033 )
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="Image" type="Sprite" parent="."]
position = Vector2( 903.193, 475.082 )
scale = Vector2( 2.50887, 2.33779 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.551
anchor_top = 0.5
anchor_right = 0.572
anchor_bottom = 0.5
margin_left = -258.941
margin_top = -12.06
margin_right = 339.087
margin_bottom = 142.94
rect_min_size = Vector2( 75, 0 )
rect_scale = Vector2( 1.40477, 1.13151 )
alignment = 1

[node name="start" type="Button" parent="VBoxContainer"]
margin_right = 626.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
rect_pivot_offset = Vector2( -120, 10 )
focus_neighbour_top = NodePath("../quit")
text = "start"

[node name="options" type="Button" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 626.0
margin_bottom = 154.0
rect_min_size = Vector2( 75, 75 )
rect_pivot_offset = Vector2( -120, 10 )
text = "Options"

[node name="credits" type="Button" parent="VBoxContainer"]
margin_top = 158.0
margin_right = 626.0
margin_bottom = 233.0
rect_min_size = Vector2( 75, 75 )
rect_pivot_offset = Vector2( -120, 10 )
text = "Credits"

[node name="quit" type="Button" parent="VBoxContainer"]
margin_top = 237.0
margin_right = 626.0
margin_bottom = 312.0
rect_min_size = Vector2( 75, 75 )
rect_pivot_offset = Vector2( -120, 10 )
focus_neighbour_bottom = NodePath("../start")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/credits" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
